--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+html {
+  background: rgb(0, 174, 204);
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
